--- a/javaEffective/build.gradle
+++ b/javaEffective/build.gradle
@@ -10,7 +10,8 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.projectlombok:lombok:1.18.16'
+    implementation 'org.projectlombok:lombok:1.18.24'
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compileOnly 'org.projectlombok:lombok'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
